k8s/manifests/apps/network-system/static-routes/pikvm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "monitor-share"
    hajimari.io/appName: "piKVM"

spec:
  tls:
    - secretName: tls.pikvm
      hosts:
        - &host "pikvm.${EXTERNAL_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pikvm
                port:
                  name: https
